--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,7 +24,7 @@ body {
     color: #d9dcd6;
 }
 
-.header nav {
+.header div {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -32,10 +32,10 @@ body {
     font-size: 20px;
 }
 
-.header nav ul {
+.header div ul {
     list-style-type: none;
 }
-/* change div to nav */
+
 .header div ul li {
     display: inline-block;
     margin-left: 25px;
@@ -86,40 +86,30 @@ p {
     background-color: #2589bd;
 }
 
-.benefit-lead {
+/*  --------------------------------------------------------------- */
+
+.benefit-brand{
     margin-bottom: 32px;
     color: #ffffff;
 }
 
-.benefit-brand {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
 
-.benefit-cost {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-lead h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
+/*  --------------------------------------------------------------- */
 
 .benefit-brand h3 {
     margin-bottom: 10px;
     text-align: center;
 }
 
-.benefit-cost h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-.benefit-sections img{
+/*  --------------------------------------------------------------- */
+
+.benefit-brand img {
     display: block;
     margin: 10px auto;
-    max-width: 150px;   
+    max-width: 150px;
 }
+
+/*  --------------------------------------------------------------- */
 
 .search-engine-optimization {
     margin-bottom: 20px;
@@ -185,3 +175,4 @@ p {
 .footer h2 {
     font-size: 20px;
 }
+
